save progress for auto schedule